test: adds additional sample tasks files

--- a/planner/templates/index.html
+++ b/planner/templates/index.html
@@ -31,7 +31,9 @@
                             ...
                         ]
                     </code>
-                    <p>A few sample tasks files can be found <a href="">here</a></p>
+                    <p>A few sample tasks files can be found
+                        <a href="https://github.com/Bgeninatti/planner/tree/main/tests/sample_tasks">here</a>
+                    </p>
                 </li>
                 <li>Submit the file.</li>
                 <li>The best subset of tasks and excluded tasks will be displayed.</li>
